Added custom error controller and custom spring security

--- a/src/main/resources/templates/error-403.html
+++ b/src/main/resources/templates/error-403.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-	   <title>Something went wrong!</title>
+	   <title>Forbidden Page!</title>
 	   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	   <link rel="stylesheet" type="text/css" media="all" 
 	         href="/css/style.css" th:href="@{/css/style.css}" />
 	 </head>
 	<body>
-		<h1>Something went wrong!</h1>
-		<h2>Our Engineers are on it</h2>
+		<h1>Forbidden Page!</h1>
+		<h2>Sorry, you are not allowed to view this page.</h2>
 		<a th:href="@{/}">Go Home</a>
 	</body>
 </html>
