--- a/src/main/resources/templates/error-500.html
+++ b/src/main/resources/templates/error-500.html
@@ -8,7 +8,7 @@
 	 </head>
 	<body>
 		<h1>Something went wrong!</h1>
-		<h2>Our Engineers are on it</h2>
+		<h2>Our Engineers are on it.</h2>
 		<a th:href="@{/}">Go Home</a>
 	</body>
 </html>
