--- a/src/main/resources/templates/error-401.html
+++ b/src/main/resources/templates/error-401.html
@@ -7,8 +7,8 @@
 	         href="/css/style.css" th:href="@{/css/style.css}" />
 	 </head>
 	<body>
-		<h1>Something went wrong!</h1>
-		<h2>Our Engineers are on it</h2>
+		<h1>Page Not Found!</h1>
+		<h2>Sorry, we couldn't find the page you were looking for.</h2>
 		<a th:href="@{/}">Go Home</a>
 	</body>
 </html>
