--- a/src/main/resources/templates/error-401.html
+++ b/src/main/resources/templates/error-401.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-	   <title>Something went wrong!</title>
+	   <title>Unauthorized!</title>
 	   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	   <link rel="stylesheet" type="text/css" media="all" 
 	         href="/css/style.css" th:href="@{/css/style.css}" />
 	 </head>
 	<body>
-		<h1>Page Not Found!</h1>
-		<h2>Sorry, we couldn't find the page you were looking for.</h2>
+		<h1>Unauthorized!</h1>
+		<h2>Sorry, you are not authenticated. Kindly authenticate.</h2>
 		<a th:href="@{/}">Go Home</a>
 	</body>
 </html>
